@@ -336,3 +336,5 @@
 2015-11-15 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug in 'sy/sylwrp_client.cpp' that caused the
 	'SyLwrpClient::setGpiCode()' method to fail intermittently.
+2015-11-16 Fred Gleason <fredg@paravelsystems.com>
+	* Added syslog calls in 'sy/sylwrp_client.cpp'.
